# gallagher

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLI.md  Dockerfile  HARDWARE.md  LICENSE  README.md  SECURITY.md  SQL.md  TODO.md  TUI.md  Taskfile.yml  index.html  pyproject.toml  serve.toml  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  publish-package.yml  run-tests.yml
assets/: README.md  groups.json
cli/: index.html
design/: index.html
docs/: mkdocs.yml
docs/docs/: cli.md  design.md  howto-api-client.md  index.md  installation.md  mcp.md  python-sdk.md  sql.md  tcp-server.md  tui.md  usage.md
examples/: alarm.py  cardholder.py  events.py  mcp_example.py  tcp_server_test.py  timemachie.ps1
gallagher/: __init__.py  const.py  decorators.py  enum.py  exception.py
gallagher/cc/: __init__.py  access_groups.py  alarm_zones.py  competencies.py  core.py  doors.py  elevators.py  fence_zones.py  inputs.py  interlock_groups.py  lockers.py  macros.py  operators.py  outputs.py  receptions.py  roles.py  utils.py  visitors.py  visits.py  vtables.py  zones.py
gallagher/cc/alarms/: __init__.py  day_category.py  divisions.py  event.py  events.py  items.py  schedule.py
gallagher/cc/card/: __init__.py  card_type.py
gallagher/cc/cardholders/: __init__.py  card_type.py  cardholders.py
gallagher/cc/divisions/: __init__.py
gallagher/cc/items/: __init__.py
gallagher/cc/status_overrides/: __init__.py
gallagher/cli/: __init__.py  __main__.py  access_groups.py  agroup.py  alarms.py  azone.py  cardholders.py  comp.py  const.py  day.py  divisions.py  door.py  doors.py  elevator.py  events.py  fence.py  ilock.py  input.py  item.py  locker.py  lockers.py  macro.py  mcp.py  og.py  operators.py  output.py  pdf.py  reception.py  receptions.py  redaction.py  roles.py  schedule.py  utils.py  visitors.py  visits.py  zones.py
gallagher/console/: __init__.py  gallagher.tcss  overview.py
gallagher/dto/: access_group.py  alarm.py  card_type.py  cardholder.py  discover.py  division.py  door.py  enum.py  event.py  features.py  items.py  pdf.py  role.py  salto.py  schedule.py  utils.py  visitor.py  zone.py
gallagher/dto/detail/: __init__.py  alarm.py  (+29 more)
gallagher/ext/: __init__.py
gallagher/mcp/: __init__.py  __main__.py  server.py
gallagher/schema/: __init__.py  access_group.py  alarm.py  api.py  card_type.py  cardholder.py  day_category.py  discover.py  division.py  features.py  items.py  locker.py  pdf.py  role.py  salto.py  schedule.py  utils.py  visit.py  visitor.py  zone.py
gallagher/tui/: __init__.py  __main__.py  dashboard.py  gallagher.tcss  overview.py
installation/: index.html
python-sdk/: index.html
search/: search_index.json
sql/: index.html
src/gallagher/: __about__.py  const.py
tests/: __init__.py  conftest.py  test_access_groups.py  test_alarm.py  test_alarm_zones.py  test_card_types.py  test_cardholder.py  test_competencies.py  test_day_category.py  test_discover.py  test_divisions.py  test_doors.py  test_elevators.py  test_events.py  test_fence_zones.py  test_inputs.py  test_interlock_groups.py  test_issues.py  test_items.py  test_lockers.py  test_macros.py  test_mcp.py  test_operators.py  test_outputs.py  test_pdf.py  test_receptions.py  test_roles.py  test_schedule.py  test_version.py  test_visitors.py  test_visits.py  test_zones.py
tui/: index.html
(+127 files in other folders)
