[project]
name = "gallagher"
version = "1.0.0"
description = "The missing developer toolkit for Gallagher Command Centre"
authors = [
    {name = "Anomaly",email = "oss@anomaly.ltd"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tui.dependencies]
textual = "^3.2.0"


[tool.poetry.group.cli.dependencies]
typer = "^0.16.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.14"
textual-dev = "^1.7.0"
pygments = "^2.19.1"
pytest-order = "^1.3.0"
mkdocs-typer = "^0.0.3"


[tool.poetry.group.sync.dependencies]
shillelagh = "^1.3.5"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"

