[project]
name = "gallagher"
version = "1.0.0"
description = "The missing developer toolkit for Gallagher Command Centre"
authors = [{ name = "Anomaly", email = "oss@anomaly.ltd" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "email-validator>=2.2.0",
]

[project.scripts]
gala = "gallagher.cli:app"

[project.optional-dependencies]
tui = ["textual>=3.2.0,<4.0.0"]
cli = ["typer>=0.16.0,<1.0.0"]
dev = [
    "pytest>=8.3.5,<9.0.0",
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.6.14,<10.0.0",
    "textual-dev>=1.7.0,<2.0.0",
    "pygments>=2.19.1,<3.0.0",
    "pytest-order>=1.3.0,<2.0.0",
    "mkdocs-typer>=0.0.3,<1.0.0",
]
sync = [
    "shillelagh>=1.3.5,<2.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "alembic>=1.16.1,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
cli = ["asyncer>=0.0.8"]
dev = [
    "coverage>=7.9.1",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.6.14",
    "mkdocs-typer>=0.0.3",
    "mkdocstrings>=0.29.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "textual-dev>=1.7.0",
]
tui = ["textual>=3.5.0"]
